[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"
description = "A project templat for rust programming language"
repository = "https://github.com/gohokies/rust-template"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
